GetPackageService.java list changed to collectors list and map updated to update new default version